# tfgBrais

./: .gitignore  CMakeLists.txt  README.md
data/camera_calibration/: camera_calib.txt
data/models/manix/: manix.mhd
data/models/skull/: skull.fbx  skull.mtl
memoria/: .gitignore  .latexmkrc  memoria_tfg.tex
memoria/anexos/: capturas_aplicacion.tex  detalles_implementacion.tex  diagramas_detallados.tex
memoria/bibliografia/: acronimos.tex  bibliografia.bib  glosario.tex
memoria/contido/: Trabajo Futuro.tex  conclusions.tex  diseñomarcador.tex  ejecucion_del_proyecto.tex  ejecucion_del_pryecto.tex  estado_del_arte.tex  fundamentos_teoricos.tex  herramientas_y_software.tex  introducion.tex  metodologia_y_gestion_del_proyecto.tex  metodos.tex  modelosdesdetac.tex  visualizacion.tex
memoria/portada/: palabras_chave.tex  portada.tex  resumo.tex
opencv_test/: aruco_samples_utility.hpp  opencv_test.sln  opencv_test.vcxproj  opencv_test.vcxproj.filters
opencv_test/opencv_test/: aruco_samples_utility.hpp  opencv_test.cpp  opencv_test.vcxproj  opencv_test.vcxproj.filters  tracker.cpp  tracker.h
opencv_test/opencv_test/camera_calibration/: camera_calibration.txt
src/: ar_app.cpp  assimp_loader.cpp  assimp_loader.h  cameraCalibration.cpp  generateMarkers.cpp  gl_renderer.cpp  gl_renderer.h  image_data.h  marker_tracker.cpp  marker_tracker.h  obj_loader.h  obj_renderer.cpp  obj_renderer.h  opencv_test (2).cpp  opencv_test.cpp  tracker.cpp  tracker.h  trackingTestBench.cpp
win64-msvc2022/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  opencv_test.sln  opencv_test.vcxproj  opencv_test.vcxproj.filters
